jokes/jokes.css
body{
    font-size: 30px;
    width: 100vw;
    height: 100vh;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin: 0px;
    padding: 0px;
    text-align: center;
    background-color: cadetblue;
    background-image: url("../images/background.jpg");
    background-repeat: none;
    background-position: center;
    background-size: cover;
    backdrop-filter: blur(5px);
}
#meme-container{
    height: 60vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
#meme-container img{
    height: 50vh;
    border-radius: 10px;
}

#next-joke-button{
    font-size: large;
    width: 300px;
    height: 40px;
    margin-top: 0px;
    margin-bottom: 10px;
    background-color:rgb(60, 112, 18);
    color: white;
    cursor: pointer;
    border-radius: 5px;
    margin: 0.5%;
    margin-top: 20px;
}

